# AmplifyP

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  README.md  debug_repliconf.py  generate_repliconf_jcww2.py  pyproject.toml  verify_amplicon_gen.py
.github/workflows/: tests.yml  workflow.yml
resources/: README.md  amplicon_test_jcww2.py  example_GUI_save_state.json  primers.txt  repliconf_comprehensive_test.py  template.txt
src/amplifyp/: __init__.py  amplicon.py  constants.py  dimer.py  dimer_primer.py  dna.py  errors.py  gui.py  melting.py  nucleotides.py  origin.py  pcr.py  replication.py  replication_origin.py  replication_target.py  repliconf.py  replisome.py  settings.py  types.py
src/amplifyp/antigravity_gui/: __init__.py
src/amplifyp/gui/: gui.py
src/amplifyp/gui2/: __init__.py  app.py  map_view.py  plotter.py
tests/: amplicon_amplify4_test.py  amplicon_generic_test.py  amplicon_test.py  amplicon_test_amplify4.py  amplicon_test_generic.py  amplicon_test_jcww2.py  amplify4_examples.py  amplify4_examples_test.py  basic_replisome_test.py  comprehensive_test.py  constants_test.py  dimer_primer_test.py  dimer_test.py  dna_test.py  jcww2_example.py  melting_test.py  origin_test.py  pcr_test.py  primer_binding_clarification_test.py  primer_search_test.py  replication_origin_test.py  replication_target_test.py  replication_test.py  repliconf_comprehensive_test.py  repliconf_test.py  settings_test.py  simple_replisome_test.py  test_amplicon_class.py  test_amplicon_gen.py  test_amplicon_generator_optimization.py  test_gui_delete.py  test_gui_settings.py  test_gui_state.py  test_replisome.py  types_test.py  verify_primer_analysis.py
tests/antigravity_gui/: conftest.py  mocks.py  test_gui_delete.py  test_gui_settings.py  test_gui_simulation.py  test_gui_state.py
tests/examples/: amplify4_examples.py  jcww2_examples.py
tests/gui/: conftest.py  mocks.py  test_gui_delete.py  test_gui_settings.py  test_gui_simulation.py  test_gui_state.py
