[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "amplifyp"
version = "v0.0.1"
description = "Python rewrite of Amplify 4"
readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
optional-dependencies.tests = [
  "pytest",
]
urls.Homepage = "https://github.com/fangfufu/AmplifyP"
urls.Issues = "https://github.com/fangfufu/AmplifyP/issues"
author = [
  { name = "Fufu Fang", email = "fangfufu2003@gmail.com" },
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
  "--import-mode=importlib",
]
