[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "amplifyp"
version = "v0.0.1"
description = "Python rewrite of Amplify 4"
readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
optional-dependencies.tests = [
  "pytest",
]
urls.Homepage = "https://github.com/fangfufu/AmplifyP"
urls.Issues = "https://github.com/fangfufu/AmplifyP/issues"
author = [
  { name = "Fufu Fang", email = "fangfufu2003@gmail.com" },
]

[tool.ruff]
target-version = "py312"

line-length = 88
# Enable everything you mentioned:
lint.select = [
  "D",  # pydocstyle (Docstrings)
  "E",
  "F",
  "I",  # isort
  "S",  # Bandit (Security)
  "UP", # pyupgrade
  "W",  # Flake8 / Pyflakes
]
# Ignore "S101" (assert used) in all files inside the tests directory
lint.per-file-ignores."tests/**/*.py" = [ "S101" ]
lint.pydocstyle.convention = "google"              # or "numpy" / "pep257"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
  "--import-mode=importlib",
]

[tool.coverage.run]
omit = [ "src/amplifyp/gui.py" ]
