[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "amplifyp"
version = "v0.0.1"
description = "Python rewrite of Amplify 4"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "customtkinter",
]

classifiers = [
  "Programming Language :: Python :: 3 :: Only",

  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
optional-dependencies.tests = [
  "pytest",
  "pytest-cov",
  "pytest-testmon",
]
urls.Homepage = "https://github.com/fangfufu/AmplifyP"
urls.Issues = "https://github.com/fangfufu/AmplifyP/issues"
author = [
  { name = "Fufu Fang", email = "fangfufu2003@gmail.com" },
]

[tool.ruff]
target-version = "py312"
exclude = ["resources"]
line-length = 80

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle (Docstrings)
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "RUF", # Ruff-specific rules
  "S",   # Bandit (Security)
  "T10", # flake8-debugger
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
# Ignore "S101" (assert used) in all files inside the tests directory
lint.per-file-ignores."tests/**/*.py" = [ "S101", "D" ]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
pythonpath = "src"
norecursedirs = ["resources"]
addopts = [
  "--import-mode=importlib",
  "--cov=src/amplifyp",
  "--cov-report=xml",
]

[tool.coverage.run]
omit = [ "src/amplifyp/gui.py" ]
